--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Portfolio Luis Rua Estrada</title>
+    <title>Portfolio Luisa Rua Estrada</title>
   </head>
   <body>
     <h1>Hello World! 👋🏽</h1>
