--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
     <title>Portfolio Luisa Rua Estrada</title>
   </head>
   <body>
-    <h1>Hello World! 👋🏽</h1>
+    <div class="hero">
+      <p>👋🏽 Hello! I am</p>
+      <h1>Luisa Rua Estrada</h1>
+      <h2 class="mb-5">Wealth Planning Analyst based in the UK</h2>
+      <div>
+        <a href="#" class="btn btn-branding">Contact me</a>
+      </div>
+    </div>
   </body>
 </html>
