added gitattributes file

--- a/index.html
+++ b/index.html
@@ -37,5 +37,6 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
+    <p>Featured projects shows some of my best work so far</p>
   </body>
 </html>
