--- a/index.html
+++ b/index.html
@@ -37,6 +37,61 @@
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
     </div>
-    <p>Featured projects shows some of my best work so far</p>
+    <p class="text-center m-5">
+      This page showcases some of my coding projects so far
+    </p>
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col d-none d-lg-block">
+          <img src="images/samba.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Samba Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch app</a>
+          </div>
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch app</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather-app.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col d-none d-lg-block">
+          <img src="images/croissant.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-5">Croissant Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch app</a>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
