--- a/index.html
+++ b/index.html
@@ -29,12 +29,44 @@
     <title>Portfolio Luisa Rua Estrada</title>
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Lu 💫</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Homepage</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about-me.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Work with me</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
     <div class="hero">
       <p>👋🏽 Hello! I am</p>
       <h1>Luisa Rua Estrada</h1>
+      <img class="luisa" src="images/lulu.png" alt="" />
       <h2 class="mb-5">Wealth Planning Analyst based in the UK</h2>
       <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+        <a href="#" class="btn btn-branding">Work with me</a>
       </div>
     </div>
     <p class="text-center m-5">
