--- a/contact.html
+++ b/contact.html
@@ -29,38 +29,140 @@
     <title>Document</title>
   </head>
   <body>
-    <body>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Lu 💫</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html"
-                  >Homepage</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="about-me.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="contact.html">Work with me</a>
-              </li>
-            </ul>
-          </div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="index.html">Lu 💫</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Homepage</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="about-me.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Work with me</a>
+              </nav>
+              <div class="contact-hero mb-5">
+                <h1 class="contact-details">Get in touch</h1>
+              </div>
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-8">
+                    <div class="mb-4">
+                      <label for="exampleFormControlInput1" class="form-label"
+                        >Email:</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="exampleFormControlInput1"
+                        placeholder="....@email.com"
+                      />
+                    </div>
+                    <div class="mb-4">
+                      <label
+                        for="exampleFormControlTextarea1"
+                        class="form-label"
+                        >Message:</label
+                      >
+                      <textarea
+                        class="form-control"
+                        id="exampleFormControlTextarea1"
+                        rows="3" placeholder="..."
+                      ></textarea>
+                    </div>
+                    <div>
+                      <a
+                        href="#"
+                        class="btn btn-branding-outline mb-5 float-end"
+                        >Submit</a
+                      >
+                    </div>
+                  </div>
+                  <div class="col-sm-4 pt-5">
+                    <div class="row mb-4">
+                      <div class="col-4">
+                        <i
+                          class="far fa-envelope icon float-end"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                      <div class="col-6">
+                        <div class="contact-description">Email:</div>
+                        <a
+                          href="mailto:luisafre01@gmail.com"
+                          class="contact-link"
+                          >luisafre01@gmail.com</a
+                        >
+                      </div>
+                    </div>
+                    <div class="row mb-4">
+                      <div class="col-4">
+                        <i
+                          class="fab fa-linkedin icon float-end"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                      <div class="col-6">
+                        <div class="contact-description">Linkedin:</div>
+                        <a
+                          href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/"
+                          class="contact-link"
+                          target="_blank"
+                          >@luisaruaestrada</a
+                        >
+                      </div>
+                    </div>
+                    <div class="row mb-4">
+                      <div class="col-4">
+                        <i
+                          class="fab fa-brands fa-twitter-square icon float-end"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                      <div class="col-6">
+                        <div class="contact-description">Twitter:</div>
+                        <a
+                          href="https://twitter.com/luloestrada"
+                          class="contact-link"
+                          target="_blank"
+                          >@luloestrada</a
+                        >
+                      </div>
+                    </div>
+                    <div class="row mb-4">
+                      <div class="col-4">
+                        <i
+                          class="fas fa-map-marker-alt icon float-end"
+                          aria-hidden="true"
+                        ></i>
+                      </div>
+                      <div class="col-6">
+                        <div class="contact-description">Location:</div>
+                        <div class="contact-link">London, UK</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </body>
+      </div>
+    
   </body>
 </html>
