--- a/about-me.html
+++ b/about-me.html
@@ -54,7 +54,7 @@
               <a class="nav-link" href="about-me.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Work with me</a>
+              <a class="nav-link" href="contact.html">Get in contact</a>
             </li>
           </ul>
         </div>
