--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Document</title>
+    <title>Get In Contact</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -54,10 +54,10 @@
               <a class="nav-link" href="about-me.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Work with me</a>
+              <a class="nav-link" href="contact.html">Get in contact</a>
               </nav>
               <div class="contact-hero mb-5">
-                <h1 class="contact-details">Get in touch</h1>
+                <h1 class="contact-details">Get in contact</h1>
               </div>
               <div class="container">
                 <div class="row">
@@ -88,6 +88,7 @@
                     <div>
                       <a
                         href="#"
+                        id="submit-btn"
                         class="btn btn-branding-outline mb-5 float-end"
                         >Submit</a
                       >
@@ -97,7 +98,7 @@
                     <div class="row mb-4">
                       <div class="col-4">
                         <i
-                          class="far fa-envelope icon float-end"
+                          class="far fa-envelope icon float-end fa-3x"
                           aria-hidden="true"
                         ></i>
                       </div>
@@ -113,7 +114,7 @@
                     <div class="row mb-4">
                       <div class="col-4">
                         <i
-                          class="fab fa-linkedin icon float-end"
+                          class="fab fa-linkedin icon float-end fa-3x"
                           aria-hidden="true"
                         ></i>
                       </div>
@@ -129,28 +130,24 @@
                     </div>
                     <div class="row mb-4">
                       <div class="col-4">
-                        <i
-                          class="fab fa-brands fa-twitter-square icon float-end"
-                          aria-hidden="true"
-                        ></i>
-                      </div>
+<i class="fab fa-brands fa-twitter-square icon float-end fa-3x" aria-hidden="true"></i>
+</div>
+
                       <div class="col-6">
                         <div class="contact-description">Twitter:</div>
                         <a
                           href="https://twitter.com/luloestrada"
                           class="contact-link"
                           target="_blank"
-                          >@luloestrada</a
-                        >
+                          >@luloestrada</a>
                       </div>
                     </div>
                     <div class="row mb-4">
                       <div class="col-4">
-                        <i
-                          class="fas fa-map-marker-alt icon float-end"
+                       <i class="fas fa-globe-europe icon float-end fa-3x"
                           aria-hidden="true"
                         ></i>
-                      </div>
+                                           </div>
                       <div class="col-6">
                         <div class="contact-description">Location:</div>
                         <div class="contact-link">London, UK</div>
@@ -163,6 +160,26 @@
           </ul>
         </div>
       </div>
-    
+    <footer>
+      <div class="socialmedia-icons">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col-4">
+              <a href="mailto:luisafre01@gmail.com" target="_blank" title="Link to my email">
+                <i class=" fa fa-envelope icon fa-3x" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-4">
+              <a href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/" target="_blank" title="Link to my linkedin page">
+                <i class="fab fa-linkedin icon fa-3x" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-4">
+              <a href="https://twitter.com/luloestrada" target="_blank" title="Link to my Twitter profile">
+                <i class="fab fa-brands fa-twitter-square icon fa-3x" aria-hidden="true"></i></a>
+            </div>
+          </div>
+        </div>
+        <h5>Luisa Rua Estrada</h5>
+      </div>
+    </footer>
   </body>
 </html>
