--- a/index.html
+++ b/index.html
@@ -54,19 +54,19 @@
               <a class="nav-link" href="about-me.html">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Work with me</a>
+              <a class="nav-link" href="contact.html">Get in contact</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <div class="hero">
-      <p>👋🏽 Hello! I am</p>
+      <p>👋🏽 Hello! I am <i class="fa-light fa-earth-europe"></i></p>
       <h1>Luisa Rua Estrada</h1>
       <img class="luisa" src="images/lulu.png" alt="" />
       <h2 class="mb-5">Wealth Planning Analyst based in the UK</h2>
       <div>
-        <a href="#" class="btn btn-branding">Work with me</a>
+        <a href="#" class="btn btn-branding">Get in touch</a>
       </div>
     </div>
     <p class="text-center m-5">
@@ -79,7 +79,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Samba Project</h2>
+            <h2 class="mb-4">Samba Project</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -93,7 +93,7 @@
       <div class="row mb-4">
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Weather App</h2>
+            <h2 class="mb-4">Weather App</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
@@ -113,7 +113,7 @@
         </div>
         <div class="col">
           <div class="project-description">
-            <h2 class="mb-5">Croissant Project</h2>
+            <h2 class="mb-4">Responsive Website</h2>
             <p class="mb-5 text-muted">
               Far far away, behind the word mountains, far from the countries
               Vokalia and Consonantia, there live the blind texts. Separated
