more CSS adjustments

--- a/contact.html
+++ b/contact.html
@@ -98,9 +98,8 @@
                     <div class="row mb-4">
                       <div class="col-4">
                         <i
-                          class="far fa-envelope icon float-end fa-3x"
-                          aria-hidden="true"
-                        ></i>
+                          class="far fa-solid fa-paper-plane icon float-end fa-3x" 
+                          aria-hidden="true"></i>
                       </div>
                       <div class="col-6">
                         <div class="contact-description">Email:</div>
@@ -147,7 +146,7 @@
                        <i class="fas fa-globe-europe icon float-end fa-3x"
                           aria-hidden="true"
                         ></i>
-                                           </div>
+                     </div>
                       <div class="col-6">
                         <div class="contact-description">Location:</div>
                         <div class="contact-link">London, UK</div>
@@ -164,16 +163,19 @@
       <div class="socialmedia-icons">
         <div class="container">
           <div class="row mb-4">
-            <div class="col-4">
-              <a href="mailto:luisafre01@gmail.com" target="_blank" title="Link to my email">
+            <div class="col-3">
+              <a class="link-icons" href="mailto:luisafre01@gmail.com" target="_blank" title="Link to my email">
                 <i class=" fa fa-envelope icon fa-3x" aria-hidden="true"></i></a>
             </div>
-            <div class="col-4">
-              <a href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/" target="_blank" title="Link to my linkedin page">
+            <div class="col-3">
+              <a class="link-icons" href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/" target="_blank" title="Link to my linkedin page">
                 <i class="fab fa-linkedin icon fa-3x" aria-hidden="true"></i></a>
             </div>
-            <div class="col-4">
-              <a href="https://twitter.com/luloestrada" target="_blank" title="Link to my Twitter profile">
+            <div class="col-3"> <a class="link-icons" href="https://github.com/lulo93" target="_blank" title="Link to my GitHub profile">
+                <i class="fab fa-brands fa-github icon fa-3x" aria-hidden="true"></i></a>
+            </div>
+            <div class="col-3">
+              <a class="link-icons" href="https://twitter.com/luloestrada" target="_blank" title="Link to my Twitter profile">
                 <i class="fab fa-brands fa-twitter-square icon fa-3x" aria-hidden="true"></i></a>
             </div>
           </div>
