--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
     </nav>
     <div class="hero">
       <p>👋🏽 Hello! I am <i class="fa-light fa-earth-europe"></i></p>
-      <h1>Luisa Rua Estrada</h1>
+
+      <div class="center"><h1 class="introduction">Luisa Rua Estrada</h1></div>
+
       <img class="luisa" src="images/lulu.png" alt="" />
       <h2 class="mb-5">Wealth Planning Analyst based in the UK</h2>
       <div>
