added footers to all pages, some CSS changes for layout of pages

--- a/index.html
+++ b/index.html
@@ -127,5 +127,61 @@
         </div>
       </div>
     </div>
+    <footer>
+      <div class="socialmedia-icons">
+        <div class="container">
+          <div class="row mb-4">
+            <div class="col-3">
+              <a
+                class="link-icons"
+                href="mailto:luisafre01@gmail.com"
+                target="_blank"
+                title="Link to my email"
+              >
+                <i class="fa fa-envelope icon fa-3x" aria-hidden="true"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a
+                class="link-icons"
+                href="https://www.linkedin.com/in/luisa-rua-estrada-58b016a7/"
+                target="_blank"
+                title="Link to my linkedin page"
+              >
+                <i class="fab fa-linkedin icon fa-3x" aria-hidden="true"></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a
+                class="link-icons"
+                href="https://github.com/lulo93"
+                target="_blank"
+                title="Link to my GitHub profile"
+              >
+                <i
+                  class="fab fa-brands fa-github icon fa-3x"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </div>
+            <div class="col-3">
+              <a
+                class="link-icons"
+                href="https://twitter.com/luloestrada"
+                target="_blank"
+                title="Link to my Twitter profile"
+              >
+                <i
+                  class="fab fa-brands fa-twitter-square icon fa-3x"
+                  aria-hidden="true"
+                ></i
+              ></a>
+            </div>
+          </div>
+        </div>
+        <br />
+        <h6>Open source code by Luisa Rua Estrada</h6>
+      </div>
+    </footer>
   </body>
 </html>
