--- a/contact.html
+++ b/contact.html
@@ -57,11 +57,11 @@
               <a class="nav-link" href="contact.html">Get in contact</a>
               </nav>
               <div class="contact-hero mb-5">
-                <h1 class="contact-details">Get in contact</h1>
+              <h1>Get in contact</h1>
               </div>
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-8">
+                  <div class="col-sm-6">
                     <div class="mb-4">
                       <label for="exampleFormControlInput1" class="form-label"
                         >Email:</label
@@ -82,7 +82,7 @@
                       <textarea
                         class="form-control"
                         id="exampleFormControlTextarea1"
-                        rows="3" placeholder="..."
+                        rows="3" placeholder="Type message here..."
                       ></textarea>
                     </div>
                     <div>
@@ -94,7 +94,7 @@
                       >
                     </div>
                   </div>
-                  <div class="col-sm-4 pt-5">
+                  <div class="col-sm-6 pt-5">
                     <div class="row mb-4">
                       <div class="col-4">
                         <i
@@ -103,11 +103,9 @@
                       </div>
                       <div class="col-6">
                         <div class="contact-description">Email:</div>
-                        <a
-                          href="mailto:luisafre01@gmail.com"
+                        <a href="mailto:luisafre01@gmail.com"
                           class="contact-link"
-                          >luisafre01@gmail.com</a
-                        >
+                          >luisafre01@gmail.com</a>
                       </div>
                     </div>
                     <div class="row mb-4">
@@ -129,9 +127,8 @@
                     </div>
                     <div class="row mb-4">
                       <div class="col-4">
-<i class="fab fa-brands fa-twitter-square icon float-end fa-3x" aria-hidden="true"></i>
-</div>
-
+                   <i class="fab fa-brands fa-twitter-square icon float-end fa-3x" aria-hidden="true"></i>
+                    </div>
                       <div class="col-6">
                         <div class="contact-description">Twitter:</div>
                         <a
@@ -143,13 +140,15 @@
                     </div>
                     <div class="row mb-4">
                       <div class="col-4">
-                       <i class="fas fa-globe-europe icon float-end fa-3x"
-                          aria-hidden="true"
-                        ></i>
-                     </div>
+                   <i class="fab fa-brands fa-github icon float-end fa-3x" aria-hidden="true"></i>
+                    </div>
                       <div class="col-6">
-                        <div class="contact-description">Location:</div>
-                        <div class="contact-link">London, UK</div>
+                        <div class="contact-description">GitHub:</div>
+                        <a
+                          href="https://github.com/lulo93"
+                          class="contact-link"
+                          target="_blank"
+                          >@lulo93</a>
                       </div>
                     </div>
                   </div>
@@ -180,7 +179,8 @@
             </div>
           </div>
         </div>
-        <h5>Luisa Rua Estrada</h5>
+        <br />
+        <h6>Open source code by Luisa Rua Estrada</h6>
       </div>
     </footer>
   </body>
