--- a/about-me.html
+++ b/about-me.html
@@ -54,6 +54,9 @@
               <a class="nav-link" href="about-me.html">About me</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">Get in contact</a>
             </li>
           </ul>
