--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,9 @@
             <li class="nav-item">
               <a class="nav-link" href="about-me.html">About me</a>
             </li>
+             <li class="nav-item">
+              <a class="nav-link" href="projects.html">Projects</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Get in contact</a>
               </nav>
