--- a/projects.html
+++ b/projects.html
@@ -8,6 +8,12 @@
       src="https://kit.fontawesome.com/4cd4cd65f5.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,14 +25,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Blinker:wght@100;200;300;400;600;700;800;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Portfolio Luisa Rua Estrada</title>
+    <title>Document</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -63,105 +63,60 @@
         </div>
       </div>
     </nav>
-    <div class="hero">
-      <p>Hello! I am <i class="fa-light fa-earth-europe"></i></p>
-
-      <div class="center"><h1 class="introduction">Luisa Rua Estrada</h1></div>
-
-      <img class="luisa" src="images/lulu.png" alt="" />
-      <h2 class="mb-5">
-        Wealth Planning Analyst by day , front-end developer by night 🌒
-        <br />
-        Based in the UK
-      </h2>
-      <div>
-        <div class="arrow"></div>
-        <br />
-        <a href="#" class="btn btn-branding mt-5">Get in touch</a>
-      </div>
+    <div class="about-me-hero mb-5">
+      <h1>My Projects</h1>
     </div>
-
-    <p class="text-center m-5">
-      Here is a showcase on some of my best coding projects so far
-    </p>
-    <div class="project-carousel">
-      <div
-        id="carouselExampleDark"
-        class="carousel carousel-dark slide"
-        data-bs-ride="carousel"
-      >
-        <div class="carousel-indicators">
-          <button
-            type="button"
-            data-bs-target="#carouselExampleDark"
-            data-bs-slide-to="0"
-            class="active"
-            aria-current="true"
-            aria-label="Slide 1"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleDark"
-            data-bs-slide-to="1"
-            aria-label="Slide 2"
-          ></button>
-          <button
-            type="button"
-            data-bs-target="#carouselExampleDark"
-            data-bs-slide-to="2"
-            aria-label="Slide 3"
-          ></button>
+    <div class="container">
+      <div class="row mb-4">
+        <div class="col d-none d-lg-block">
+          <img src="images/samba.png" class="img-fluid" alt="" />
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img
-              src="images/samba.png"
-              class="d-block w-100"
-              alt="Samba website"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="samba-title">Samba website</h5>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="images/weather-app.png"
-              class="d-block w-100"
-              alt="Weather app"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <div class="slide-text"><h5>Weather app</h5></div>
-            </div>
-          </div>
-          <div class="carousel-item">
-            <img
-              src="images/croissant.png"
-              class="d-block w-100"
-              alt="Responsive website"
-            />
-            <div class="carousel-caption d-none d-md-block">
-              <div class="slide-text"><h5>Responsive website</h5></div>
-            </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Samba Project</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch app</a>
           </div>
         </div>
-        <button
-          class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleDark"
-          data-bs-slide="prev"
-        >
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
-          class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleDark"
-          data-bs-slide="next"
-        >
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+      </div>
+      <div class="row mb-4">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Weather App</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch app</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weather-app.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-4">
+        <div class="col d-none d-lg-block">
+          <img src="images/croissant.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="mb-4">Responsive Website</h2>
+            <p class="mb-5 text-muted">
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch app</a>
+          </div>
+        </div>
       </div>
     </div>
     <footer>
