Have made changes to CSS and have added intro section

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">Launch app</a>
+            <a
+              href="https://admiring-beaver-863ec4.netlify.app"
+              target="blank"
+              class="btn btn-branding-outline"
+              >Launch app</a
+            >
           </div>
         </div>
       </div>
@@ -94,7 +99,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">Launch app</a>
+            <a
+              href="https://focused-fermi-63188e.netlify.app"
+              target="blank"
+              class="btn btn-branding-outline"
+              >Launch app</a
+            >
           </div>
         </div>
         <div class="col d-none d-lg-block">
@@ -114,7 +124,12 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline">Launch app</a>
+            <a
+              href="https://vibrant-pare-4e9887.netlify.app"
+              target="blank"
+              class="btn btn-branding-outline"
+              >Launch app</a
+            >
           </div>
         </div>
       </div>
