--- a/index.html
+++ b/index.html
@@ -64,26 +64,19 @@
       </div>
     </nav>
     <div class="hero">
-      <p>Hello! I am <i class="fa-light fa-earth-europe"></i></p>
+      <p>Hello! I am</p>
 
       <div class="center"><h1 class="introduction">Luisa Rua Estrada</h1></div>
 
       <img class="luisa" src="images/lulu.png" alt="" />
       <h2 class="mb-5">
-        Wealth Planning Analyst by day , front-end developer by night 🌒
+        Wealth Planning Analyst by day, Front-End Developer by night 🌒
         <br />
         Based in the UK
       </h2>
-      <div>
-        <div class="arrow"></div>
-        <br />
-        <a href="#" class="btn btn-branding mt-5">Get in touch</a>
-      </div>
+      <div class="arrow"></div>
     </div>
-
-    <p class="text-center m-5">
-      Here is a showcase on some of my best coding projects so far
-    </p>
+        <h2 class="text-center m-5">A preview of my coding projects so far</h2>
     <div class="project-carousel">
       <div
         id="carouselExampleDark"
@@ -164,6 +157,30 @@
         </button>
       </div>
     </div>
+    <div class="center">
+      <a href="projects.html" class="btn btn-branding mt-5"
+        >See my projects</a
+      >
+    </div>
+   
+    <div class="sub-hero">
+      <h2 class="mb-5">A Brief Introduction</h2>
+
+      <p class="center">
+        Hola! I'm Lu, a British-Colombian living in London.
+        <br />
+        Welcome to my page showcasing my work as an aspiring Developer
+        transitioning from Financial Services.
+        <br />
+        Fun fact: I also dance Samba and train as a passista in my spare time.
+        <br />
+        Check out my profile below 
+      </p>
+       <div class="center">
+      <a href="about-me.html" class="btn btn-branding mt-5"
+        >More about me</a
+      >
+    </div>
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
@@ -220,5 +237,6 @@
         <h6>Open source code by Luisa Rua Estrada</h6>
       </div>
     </footer>
+    <script src="src/animation.js/"></script>
   </body>
 </html>
