added link to git repository on footers

--- a/about-me.html
+++ b/about-me.html
@@ -64,8 +64,9 @@
       </div>
     </nav>
     <div class="about-me-hero mb-5">
-      <h1 class="contact-details">About me</h1>
+      <h3 class="about-me">About Me</h3>
     </div>
+
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
@@ -119,7 +120,12 @@
           </div>
         </div>
         <br />
-        <h6>Open source code by Luisa Rua Estrada</h6>
+        <h6>
+          <a href="https://github.com/lulo93/portfolio-project"
+            >Open source code</a
+          >
+          by Luisa Rua Estrada
+        </h6>
       </div>
     </footer>
   </body>
