--- a/contact.html
+++ b/contact.html
@@ -183,7 +183,7 @@
           </div>
         </div>
         <br />
-        <h6>Open source code by Luisa Rua Estrada</h6>
+        <h6><a href="https://github.com/lulo93/portfolio-project">Open source code</a> by Luisa Rua Estrada</h6>
       </div>
     </footer>
   </body>
