--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
       <div class="center"><h1 class="introduction">Luisa Rua Estrada</h1></div>
 
-      <img class="luisa" src="images/lulu.png" alt="" />
+      <img class="luisa" class="img-fluid" src="images/lulu.png" alt="" />
       <h2 class="mb-5">
         Wealth Planning Analyst by day, Front-End Developer by night 🌒
         <br />
@@ -158,13 +158,13 @@
       </div>
     </div>
     <div class="center">
-      <a href="projects.html" class="btn btn-branding mt-5"
+      <a href="projects.html" class="btn btn-branding mt-5 mb-5"
         >See my projects</a
       >
     </div>
    
     <div class="sub-hero">
-      <h2 class="mb-5">A Brief Introduction</h2>
+      <h2 class="mb-5 mt-5">A Brief Introduction</h2>
 
       <p class="center">
         Hola! I'm Lu, a British-Colombian living in London.
@@ -234,7 +234,7 @@
           </div>
         </div>
         <br />
-        <h6>Open source code by Luisa Rua Estrada</h6>
+        <h6><a href="https://github.com/lulo93/portfolio-project">Open source code</a> by Luisa Rua Estrada</h6>
       </div>
     </footer>
     <script src="src/animation.js/"></script>
