--- a/projects.html
+++ b/projects.html
@@ -63,8 +63,8 @@
         </div>
       </div>
     </nav>
-    <div class="about-me-hero mb-5">
-      <h1>My Projects</h1>
+    <div class="projects-hero mb-5">
+      <h3 data-text="MY PROJECTS">MY PROJECTS</h3>
     </div>
     <div class="container">
       <div class="row mb-4">
@@ -187,7 +187,12 @@
           </div>
         </div>
         <br />
-        <h6>Open source code by Luisa Rua Estrada</h6>
+        <h6>
+          <a href="https://github.com/lulo93/portfolio-project"
+            >Open source code</a
+          >
+          by Luisa Rua Estrada
+        </h6>
       </div>
     </footer>
   </body>
