Added about me content, introduction and my skills.
Styling also has been added

--- a/about-me.html
+++ b/about-me.html
@@ -63,10 +63,152 @@
         </div>
       </div>
     </nav>
-    <div class="about-me-hero mb-5">
-      <h3 class="about-me">About Me</h3>
+    <div class="about-me-hero mt-4 pt-4 mb-5">
+      <div class="row pt-5">
+        <div class="col-md-10 col-lg-7 col-xl-7 img-fluid">
+          <h1>About me</h1>
+          <p class="center mt-5 mb-5">
+            Hola! I'm Lu, a british Colombian living in London. I have been
+            working in the Financial Services sector for over 5 years and as
+            much as I have enjoyed my career in Wealth Management it was time
+            for a change. I had developed a burning desire to learn new skills
+            and explore a different field but I wasn't entirely sure where to
+            begin, Someone very close to me insisted that Technology was the
+            next best sector to learn about. I had always been curious about
+            Software Development and one day my friend sent me a SheCodes ad on
+            instagram, I haven't looked back since. Now, Four Months on, I am
+            very close to graduating from the SheCodes Pro course and hopefully
+            achieving my career change in 2022!
+          </p>
+        </div>
+        <div class="col-md-2 col-lg-5 col-lg-5">
+          <img
+            id="luisa"
+            src="images/lulu.png"
+            alt="Luisa"
+            title="Luisa Rua Estrada"
+            class="img-fluid"
+          />
+        </div>
+      </div>
     </div>
 
+    <div class="skills-competencies mt-5">
+      <h2 class="subtitle mb-5">Skills and Competencies</h2>
+      <div class="row">
+        <div class="col-lg-4 pb-4">
+          <div class="row">
+            <div class="col-3">
+              <img
+                src="images/html-logo.png"
+                alt="HTML logo"
+                title="HTML"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">HTML</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/css-logo.png"
+                alt="CSS logo"
+                title="CSS"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">CSS</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/JavaScript-Logo.png"
+                alt="JavaScript logo"
+                title="JavaScript"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">JavaScript</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/VScode-logo.png"
+                alt="VS Code logo"
+                title="VS Code"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">VS Code</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4 pb-4">
+          <div class="row">
+            <div class="col-3">
+              <img
+                src="images/api-logo.png"
+                alt="API logo"
+                title="API"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">API</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/Bootstrap-logo.png"
+                alt="Bootstrap logo"
+                title="Bootstrap"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">Bootstrap</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/github-logo.png"
+                alt="Github logo"
+                title="Github"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">Github</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/netlify-logo.png"
+                alt="Netlify logo"
+                title="Hosting"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">Hosting</h6>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <div class="row">
+            <div class="col-3">
+              <img
+                src="images/flexbox-logo.png"
+                alt="Flexbox logo"
+                title="Flexbox"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">Flexbox</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/google-logo.png"
+                alt="Google logo"
+                title="SEO"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">SEO</h6>
+            </div>
+            <div class="col-3">
+              <img
+                src="images/responsive-logo.png"
+                alt="Responsive logo"
+                title="Responsive"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4">Responsive</h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
