--- a/contact.html
+++ b/contact.html
@@ -161,6 +161,8 @@
           </ul>
         </div>
       </div>
+
+      <p class="center mt-5">Want to connect? Add me or send me a message.👩🏽‍💻</p>
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
