--- a/index.html
+++ b/index.html
@@ -66,17 +66,18 @@
     <div class="hero">
       <p>Hello! I am</p>
 
-      <div class="center"><h1 class="introduction">Luisa Rua Estrada</h1></div>
+      <div class="center"><h1 class="introduction mt-5 mb-5">Luisa Rua Estrada</h1></div>
 
-      <img class="luisa" class="img-fluid" src="images/lulu.png" alt="" />
-      <h2 class="mb-5">
+        <h2 class="mb-5 mt-5">
         Wealth Planning Analyst by day, Front-End Developer by night 🌒
         <br />
         Based in the UK
       </h2>
       <div class="arrow"></div>
     </div>
-        <h2 class="text-center m-5">A preview of my coding projects so far</h2>
+        <h2 class="text-center mt-5 mb-5">A preview of my coding projects so far</h2>
+<p class="center mt-5 mb-5">Work created in SheCodes Basics, Plus and Responsive. 
+  <br /> React coming soon, stayed tuned!</p>
     <div class="project-carousel">
       <div
         id="carouselExampleDark"
