--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,7 @@
     <div class="container">
       <div class="row mb-4">
         <div class="col d-none d-lg-block">
-          <img src="images/samba.png" class="img-fluid" alt="" />
+          <img src="images/samba.png" class="img-fluid" id="project-img" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
@@ -134,6 +134,17 @@
         </div>
       </div>
     </div>
+      <p class="center">
+        I hope you have enjoyed looking at my projects throughout my SheCodes journey.
+        <br />
+        I am currently trying to grow my network and I would be happy to receive any networking requests or work enquiries.
+        <br />
+        Find all of my contact details here.
+      </p>
+       <div class="center">
+      <a href="Contact.html" class="btn btn-branding mt-5"
+        >Get in touch</a
+      >
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
