Changed website theme and have added finishing touches

--- a/about-me.html
+++ b/about-me.html
@@ -65,7 +65,7 @@
     </nav>
     <div class="about-me-hero mt-4 pt-4 mb-5">
       <div class="row pt-5">
-        <div class="col-md-10 col-lg-7 col-xl-7 img-fluid">
+        <div class="col-lg-7">
           <h1>About me</h1>
           <p class="center mt-5 mb-5">
             Hola! I'm Lu, a british Colombian living in London. I have been
@@ -73,35 +73,61 @@
             much as I have enjoyed my career in Wealth Management it was time
             for a change. I had developed a burning desire to learn new skills
             and explore a different field but I wasn't entirely sure where to
-            begin, Someone very close to me insisted that Technology was the
+            begin, someone very close to me insisted that Technology was the
             next best sector to learn about. I had always been curious about
             Software Development and one day my friend sent me a SheCodes ad on
-            instagram, I haven't looked back since. Now, Four Months on, I am
+            instagram, I haven't looked back since. Now, four months on, I am
             very close to graduating from the SheCodes Pro course and hopefully
             achieving my career change in 2022!
           </p>
         </div>
-        <div class="col-md-2 col-lg-5 col-lg-5">
+        <div class="col-lg-5 mt-3">
           <img
-            id="luisa"
             src="images/lulu.png"
             alt="Luisa"
             title="Luisa Rua Estrada"
-            class="img-fluid"
+            class=" luisa mt-3"
           />
         </div>
       </div>
     </div>
-
-    <div class="skills-competencies mt-5">
-      <h2 class="subtitle mb-5">Skills and Competencies</h2>
-      <div class="row">
+      <div class="interests-hero center">
+      <h2 class="mt-4 mb-5">What I'm Passionate About <i class="fa fa-solid fa-hand-holding-heart icon float end" aria-hidden="true"></i></h2>
+      
+       <ul>
+         <li class="mb-3">
+      Investment & personal finance
+    </li>
+    <li class="mb-3">Self-development</li>
+  <li class="mb-3">Dancing (Salsa & Samba)</li>
+<li class="mb-3">Gastronomy</li>
+<li class="mb-3">Languages</li>
+<li class="mb-3">Programming</li>
+</ul> 
+</div>
+</div>
+<div class="cert-hero center mt-5">
+<h2 class="mt-4 mb-5">Certifications <i class="fa fa-solid fa-graduation-cap icon float end" aria-hidden="true"></i></h2>
+   <ul><li class="mb-3">
+    <a href="https://www.shecodes.io/certificates/329ba8d6aeb3ad00b9ba4e961d710b9e">SheCodes Basics</a>
+    </li>
+    <a href="https://www.shecodes.io/certificates/b49796a18b45374939149f708630a12e" target="blank"><li class="mb-3">SheCodes Plus</li></a>
+  <a href="#"><li class="mb-3">SheCodes Responsive</li></a>
+<li class="mb-3">Currently working towards React
+  <br/>
+  (March 2022)
+</li>
+</ul>
+    </div>
+    <div class="skills-competencies mt-5 mb-5">
+      <h2 class="subtitle mb-5 mt-5">Skills and Competencies <i class="fa fa-regular fa-clipboard-check icon float end" aria-hidden="true"></i></h2>
+      <div class="row mt-5 mb-5">
         <div class="col-lg-4 pb-4">
-          <div class="row">
+          <div class="row mb-3 mt-5">
             <div class="col-3">
               <img
                 src="images/html-logo.png"
-                alt="HTML logo"
+                alt="HTML"
                 title="HTML"
                 class="img-fluid"
               />
@@ -110,7 +136,7 @@
             <div class="col-3">
               <img
                 src="images/css-logo.png"
-                alt="CSS logo"
+                alt="CSS"
                 title="CSS"
                 class="img-fluid"
               />
@@ -119,7 +145,7 @@
             <div class="col-3">
               <img
                 src="images/JavaScript-Logo.png"
-                alt="JavaScript logo"
+                alt="JavaScript"
                 title="JavaScript"
                 class="img-fluid"
               />
@@ -128,7 +154,7 @@
             <div class="col-3">
               <img
                 src="images/VScode-logo.png"
-                alt="VS Code logo"
+                alt="VS Code"
                 title="VS Code"
                 class="img-fluid"
               />
@@ -137,11 +163,11 @@
           </div>
         </div>
         <div class="col-lg-4 pb-4">
-          <div class="row">
+          <div class="row mb-3 mt-5">
             <div class="col-3">
               <img
                 src="images/api-logo.png"
-                alt="API logo"
+                alt="API"
                 title="API"
                 class="img-fluid"
               />
@@ -150,7 +176,7 @@
             <div class="col-3">
               <img
                 src="images/Bootstrap-logo.png"
-                alt="Bootstrap logo"
+                alt="Bootstrap"
                 title="Bootstrap"
                 class="img-fluid"
               />
@@ -159,7 +185,7 @@
             <div class="col-3">
               <img
                 src="images/github-logo.png"
-                alt="Github logo"
+                alt="Github"
                 title="Github"
                 class="img-fluid"
               />
@@ -168,7 +194,7 @@
             <div class="col-3">
               <img
                 src="images/netlify-logo.png"
-                alt="Netlify logo"
+                alt="Netlify"
                 title="Hosting"
                 class="img-fluid"
               />
@@ -177,11 +203,11 @@
           </div>
         </div>
         <div class="col-lg-4">
-          <div class="row">
+          <div class="row mb-3 mt-5">
             <div class="col-3">
               <img
                 src="images/flexbox-logo.png"
-                alt="Flexbox logo"
+                alt="Flexbox"
                 title="Flexbox"
                 class="img-fluid"
               />
@@ -190,7 +216,7 @@
             <div class="col-3">
               <img
                 src="images/google-logo.png"
-                alt="Google logo"
+                alt="Google"
                 title="SEO"
                 class="img-fluid"
               />
@@ -199,15 +225,40 @@
             <div class="col-3">
               <img
                 src="images/responsive-logo.png"
-                alt="Responsive logo"
+                alt="Responsive"
                 title="Responsive"
                 class="img-fluid"
               />
-              <h6 class="text-center mt-4">Responsive</h6>
+              <h6 class="text-center mt-4">Responsive </h6>
+            </div>
+              <div class="col-3">
+              <img
+                src="images/react-logo.png"
+                alt="React"
+                title="React"
+                class="img-fluid"
+              />
+              <h6 class="text-center mt-4"> Coming soon</h6>
+            </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
+    <div class="sub-hero">
+      <h2 class="mb-5 mt-5">Take a Look at my work</h2>
+
+      <p class="center mt-5 mb-5">
+        That's enough about me for now, but please feel free to drop me message on any of my details below.
+        <br />
+        I have spoken about what I have learnt, now take a look at what I have produced.
+        <br />
+        This website is actually a final project for the Responsive course. Check out the rest of my SheCodes projects so far. 
+      </p>
+       <div class="center mt-5 mb-5">
+      <a href="projects.html" class="btn btn-branding mb-5 mt-5"
+        >My projects</a
+      >
     </div>
     <footer>
       <div class="socialmedia-icons">
