--- a/projects.html
+++ b/projects.html
@@ -75,10 +75,11 @@
           <div class="project-description">
             <h2 class="mb-4">Samba Project</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This was my first ever SheCodes project in September 2021.
+              <br />
+              We had to make a basic webpage using HTML and CSS 
+              about anything we wanted to. Unsurprisingly I decided 
+              to make it about Samba, I had a lot of fun creating this page and have been hooked to learning code ever since.
             </p>
             <a
               href="https://admiring-beaver-863ec4.netlify.app"
@@ -94,10 +95,9 @@
           <div class="project-description">
             <h2 class="mb-4">Weather App</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+             Soon after I enrolled onto SheCodes Pro, which includes the Plus, Responsive and React courses. As part of the Plus workshop I learnt how to code in JavaScript.
+             We built a fully functional live weather app adding APIs to update weather and locations in realtime using Vanilla JavaScript. We also learnt how upload all of our code to GitHub, creating respositories and how to host them on Netlify.
+
             </p>
             <a
               href="https://focused-fermi-63188e.netlify.app"
@@ -119,10 +119,8 @@
           <div class="project-description">
             <h2 class="mb-4">Responsive Website</h2>
             <p class="mb-5 text-muted">
-              Far far away, behind the word mountains, far from the countries
-              Vokalia and Consonantia, there live the blind texts. Separated
-              they live in Bookmarksgrove right at the coast of the Semantics, a
-              large language ocean. A small river named Duden flows by
+              This is not one of my final projects for the Responsive workshop, this portfolio website  you are browsing now is!
+              However, before building this website, I made a basic responsive website about croissants using Bootstrap, CSS utilities, Flexbox and made it SEO friendly.
             </p>
             <a
               href="https://vibrant-pare-4e9887.netlify.app"
@@ -134,17 +132,22 @@
         </div>
       </div>
     </div>
-      <p class="center">
+    <div class="connected mt-5 mb-5 center">
+      <h2 class="mt-5 mb-5">Let's get connected</h2>
+      <p>
         I hope you have enjoyed looking at my projects throughout my SheCodes journey.
         <br />
-        I am currently trying to grow my network and I would be happy to receive any networking requests or work enquiries.
+        I will be adding more projects on this page, so stay tuned.
         <br />
-        Find all of my contact details here.
+        I am in the process of growing my network and would be delighted to receive any networking requests or work enquiries.
+        <br />
+  You can find all of my contact details here.
       </p>
        <div class="center">
-      <a href="Contact.html" class="btn btn-branding mt-5"
+      <a href="Contact.html" class="btn btn-branding-outline mt-5"
         >Get in touch</a
       >
+    </div>
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
