--- a/contact.html
+++ b/contact.html
@@ -162,7 +162,7 @@
         </div>
       </div>
 
-      <p class="center mt-5">Want to connect? Add me or send me a message.👩🏽‍💻</p>
+      <p class="center mt-5">Want to connect? Let's chat, add me or send me a message 👩🏽‍💻</p>
     <footer>
       <div class="socialmedia-icons">
         <div class="container">
