--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="center"><h1 class="introduction mt-5 mb-5">Luisa Rua Estrada</h1></div>
 
         <h2 class="mb-5 mt-5">
-        Wealth Planning Analyst by day, Front-End Developer by night 🌒
+        Wealth Planning Analyst by day, aspiring Developer by night 🌒
         <br />
         Based in the UK
       </h2>
@@ -163,11 +163,10 @@
         >See my projects</a
       >
     </div>
-   
-    <div class="sub-hero">
-      <h2 class="mb-5 mt-5">A Brief Introduction</h2>
+       <div class="sub-hero">
+      <h2 class="mb-5 mt-5">A brief introduction</h2>
 
-      <p class="center">
+      <p class="center mt-5 mb-5">
         Hola! I'm Lu, a British-Colombian living in London.
         <br />
         Welcome to my page showcasing my work as an aspiring Developer
@@ -177,7 +176,7 @@
         <br />
         Check out my profile below 
       </p>
-       <div class="center">
+       <div class="center mt-5 mb-5">
       <a href="about-me.html" class="btn btn-branding mt-5"
         >More about me</a
       >
