changed some mobile layout spacing

--- a/about-me.html
+++ b/about-me.html
@@ -65,9 +65,9 @@
     </nav>
     <div class="about-me-hero mt-4 pt-4 mb-5">
       <div class="row pt-5">
-        <div class="col-lg-7">
+        <div class="col-lg-6">
           <h1>About me</h1>
-          <p class="center mt-5 mb-5">
+          <p id="intro-p" class="center mt-5 mb-5">
             Hola! I'm Lu, a british Colombian living in London. I have been
             working in the Financial Services sector for over 5 years and as
             much as I have enjoyed my career in Wealth Management it was time
@@ -81,12 +81,12 @@
             achieving my career change in 2022!
           </p>
         </div>
-        <div class="col-lg-5 mt-3">
+        <div class="col-lg-6 mt-5">
           <img
             src="images/lulu.png"
             alt="Luisa"
             title="Luisa Rua Estrada"
-            class=" luisa mt-3"
+            class=" luisa mt-5"
           />
         </div>
       </div>
