--- a/projects.html
+++ b/projects.html
@@ -67,7 +67,7 @@
       <h3 data-text="MY PROJECTS">MY PROJECTS</h3>
     </div>
     <div class="container">
-      <div class="row mb-4">
+      <div class="row mb-5 mt-5">
         <div class="col d-none d-lg-block">
           <img src="images/samba.png" class="img-fluid" id="project-img" alt="" />
         </div>
@@ -90,7 +90,7 @@
           </div>
         </div>
       </div>
-      <div class="row mb-4">
+      <div class="row mb-5 mt-5">
         <div class="col">
           <div class="project-description">
             <h2 class="mb-4">Weather App</h2>
@@ -111,7 +111,7 @@
           <img src="images/weather-app.png" class="img-fluid" alt="" />
         </div>
       </div>
-      <div class="row mb-4">
+      <div class="row mb-5 mt-5">
         <div class="col d-none d-lg-block">
           <img src="images/croissant.png" class="img-fluid" alt="" />
         </div>
