centre aligned projects page

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
     <div class="projects-hero mb-5">
       <h3 data-text="MY PROJECTS">MY PROJECTS</h3>
     </div>
-    <div class="container">
+    <div class="container center">
       <div class="row mb-5 mt-5">
         <div class="col d-none d-lg-block">
           <img src="images/samba.png" class="img-fluid" id="project-img" alt="" />
