minor adjustment to wording

--- a/about-me.html
+++ b/about-me.html
@@ -249,7 +249,7 @@
       <h2 class="mb-5 mt-5">Take a Look at my work</h2>
 
       <p class="center mt-5 mb-5">
-        That's enough about me for now, but please feel free to drop me message on any of my details below.
+        That's enough about me for now, but please feel free to drop me message on any of my pages below.
         <br />
         I have spoken about what I have learnt, now take a look at what I have produced.
         <br />
