minor wording adjustment

--- a/about-me.html
+++ b/about-me.html
@@ -75,8 +75,8 @@
             and explore a different field but I wasn't entirely sure where to
             begin, someone very close to me insisted that Technology was the
             next best sector to learn about. I had always been curious about
-            Software Development and one day my friend sent me a SheCodes ad on
-            instagram, I haven't looked back since. Now, four months on, I am
+            Software Development, one day my friend sent me a SheCodes ad on
+            instagram and I haven't looked back since. Now, four months on, I am
             very close to graduating from the SheCodes Pro course and hopefully
             achieving my career change in 2022!
           </p>
