Made some minor styling adjustments

--- a/projects.html
+++ b/projects.html
@@ -108,12 +108,12 @@
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather-app.png" class="img-fluid" alt="" />
+          <img src="images/weather-app.png" class="img-fluid" id="project-img" alt="" />
         </div>
       </div>
       <div class="row mb-5 mt-5">
         <div class="col d-none d-lg-block">
-          <img src="images/croissant.png" class="img-fluid" alt="" />
+          <img src="images/croissant.png" class="img-fluid" id="project-img" alt="" />
         </div>
         <div class="col">
           <div class="project-description">
