Edited active classes on nav bar and made website SEO friendly

--- a/about-me.html
+++ b/about-me.html
@@ -26,12 +26,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Document</title>
+    <meta name="description" content="Luisa is an aspiring Software Developer based in the UK. Recently graduated from SheCodes Pro workshop">
+    <title>Front-End Developer portfolio - About Luisa Rua Estrada</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lu 💫</a>
+        <a class="navbar-brand" title="Homepage" href="index.html">Lu 💫</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -45,19 +46,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Homepage</a
+             <li class="nav-item">
+              <a class="nav-link" href="index.html" title="Homepage" >Homepage</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-me.html">About me</a>
+              <a class="nav-link active" aria-current="page" href="about-me.html" title="About Luisa">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link" href="projects.html" title="Luisa's work">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Get in contact</a>
+              <a class="nav-link" href="contact.html" title="Contact Luisa">Get in contact</a>
             </li>
           </ul>
         </div>
