--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Get In Contact</title>
+    <meta name="description" content="Luisa is an aspiring Software Developer based in the UK. Recently graduated from SheCodes Pro workshop, this page has all of her social platforms and contact details">
+    <title>Front-End Developer portfolio - Contact Luisa Rua Estrada</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lu 💫</a>
+        <a class="navbar-brand" title="Homepage" href="index.html">Lu 💫</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,19 +47,22 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Homepage</a
+              <a class="nav-link" href="index.html" title="Homepage" >Homepage</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-me.html">About me</a>
-            </li>
-             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link" href="about-me.html" title="About Luisa">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Get in contact</a>
-              </nav>
+              <a class="nav-link" href="projects.html" title="Luisa's work">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="contact.html" title="Contact Luisa">Get in contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
               <div class="contact-hero mb-5">
               <h1>Get in contact</h1>
               </div>
@@ -161,7 +165,6 @@
           </ul>
         </div>
       </div>
-
       <p class="center mt-5">Want to connect? Let's chat, add me or send me a message 👩🏽‍💻</p>
     <footer>
       <div class="socialmedia-icons">
