--- a/projects.html
+++ b/projects.html
@@ -26,12 +26,13 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Document</title>
+   <meta name="description" content="Luisa is an aspiring Software Developer based in the UK. Recently graduated from SheCodes Pro workshop, this page showcases her work">
+    <title>Front-End Developer portfolio - Luisa Rua Estrada's work</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lu 💫</a>
+        <a class="navbar-brand" title="Homepage" href="index.html">Lu 💫</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,18 +47,17 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Homepage</a
+              <a class="nav-link active" href="index.html" title="Homepage" >Homepage</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-me.html">About me</a>
+              <a class="nav-link" href="about-me.html" title="About Luisa">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link active" aria-current="page" href="projects.html" title="Luisa's work">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Get in contact</a>
+              <a class="nav-link" href="contact.html" title="Contact Luisa">Get in contact</a>
             </li>
           </ul>
         </div>
