--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/portfolio.css" />
-    <title>Portfolio Luisa Rua Estrada</title>
+    <meta name="description" content="Luisa is an aspiring Software Developer based in the UK. Recently graduated from SheCodes Pro workshop">
+    <title>Front-End Developer portfolio - Luisa Rua Estrada homepage</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Lu 💫</a>
+        <a class="navbar-brand" title="Homepage" href="index.html">Lu 💫</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -47,17 +48,17 @@
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="index.html"
-                >Homepage</a
+               title="Homepage" >Homepage</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about-me.html">About me</a>
+              <a class="nav-link" href="about-me.html" title="About Luisa">About me</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="projects.html">Projects</a>
+              <a class="nav-link" href="projects.html" title="Luisa's work">Projects</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Get in contact</a>
+              <a class="nav-link" href="contact.html" title="Contact Luisa">Get in contact</a>
             </li>
           </ul>
         </div>
@@ -158,7 +159,7 @@
         </button>
       </div>
     </div>
-    <div class="center">
+    <div class="center mb-5 mt-5">
       <a href="projects.html" class="btn btn-branding mt-5 mb-5"
         >See my projects</a
       >
@@ -174,7 +175,7 @@
         <br />
         Fun fact: I also dance Samba and train as a passista in my spare time.
         <br />
-        Check out my profile below 
+        Check out my profile below.
       </p>
        <div class="center mt-5 mb-5">
       <a href="about-me.html" class="btn btn-branding mt-5"
