--- a/projects.html
+++ b/projects.html
@@ -79,7 +79,7 @@
               <br />
               We had to make a basic webpage using HTML and CSS 
               about anything we wanted to. Unsurprisingly I decided 
-              to make it about Samba, I had a lot of fun creating this page and have been hooked to learning code ever since.
+              to make it about Samba, I had a lot of fun creating this page and have been hooked on learning code ever since.
             </p>
             <a
               href="https://admiring-beaver-863ec4.netlify.app"
