removed arrow for mobile devices as positioning was off

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
         <br />
         Based in the UK
       </h2>
-      <div class="arrow"></div>
+      <div class="arrow col d-none d-sm-block">
+    </div> 
     </div>
         <h2 class="text-center mt-5 mb-5">A preview of my coding projects so far</h2>
 <p class="center mt-5 mb-5">Work created in SheCodes Basics, Plus and Responsive. 
